family connections added to detail
